--- a/src/app/pages/edit-flight/edit-flight.component.html
+++ b/src/app/pages/edit-flight/edit-flight.component.html
@@ -17,7 +17,7 @@
                 <input type="text" id="flight-id" name="flight-id"
                 readonly="readonly"
                 disabled="disabled"
-
+                style="text-align: right;"
                 [(ngModel)]="editFlightRequest.maChuyenBay">
             </div>
     
@@ -62,7 +62,7 @@
             <div class="form-field">
                 <label for="departure-date">Ngày đi</label>
                 <input type="date" id="departure-date" name="departure-date" class="datepicker-box"
-                
+                style="text-align: right;"
                 [(ngModel)]="editFlightRequest.ngayXuatPhat">
             </div>
     
@@ -73,7 +73,7 @@
                 if (this.value < 10) {
                     this.value = '0' + this.value
                 }"
-                style="width: 20%;"
+                style="width: 20%; text-align: right"
                 [(ngModel)]="flightTime_Hour">
                 <span style="width: 10%;
                 align-self: center;
@@ -85,7 +85,7 @@
                 if (this.value < 10) {
                     this.value = '0' + this.value
                 }"
-                style="width: 20%;"
+                style="width: 20%; text-align: right"
                 [(ngModel)]="flightTime_Minute">
                 <span style="width: 10%;
                 align-self: center;
@@ -127,7 +127,8 @@
                 <label for="plane-name">Tên máy bay</label><br>
                 <input type="text" id="plane-name" name="plane-name"
                 disabled="disabled"
-                [(ngModel)]="editFlightRequest.tenMayBay">
+                [(ngModel)]="editFlightRequest.tenMayBay"
+                style="text-align: right;">
             </div>
     
             
