update search feature

--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -59,7 +59,7 @@
 
 >
   <div class="table-container"
-  *ngIf="flightList.length > 0">
+  *ngIf="dataSource.data.length > 0">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 flight-table">
 
       <ng-container matColumnDef="MaChuyenBay">
@@ -127,7 +127,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
-  <p *ngIf="flightList.length <= 0">
+  <p *ngIf="dataSource.data.length <= 0">
     Không tìm thấy thông tin chuyến bay
   </p>
 
