--- a/src/app/components/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/admin-navigation/admin-navigation.component.html
@@ -12,6 +12,6 @@
         <button class="menu-button" routerLink="/admin-dashboard/admin-ticket-management" routerLinkActive="active">Quản lý vé</button>
         <button class="menu-button" routerLink="/admin-dashboard/guest-management" routerLinkActive="active">Quản lý khách hàng</button>
         <button class="menu-button" routerLink="/admin-dashboard/statist" routerLinkActive="active">Thống kê</button>
-        <button class="menu-button" routerLink="/home">LOG OUT</button>
+        <button class="menu-button" (click)="onLogout()">LOG OUT</button>
     </div>
 </div>
