--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <section class="container-fluid div-center" style="height: calc(100vh - 48px);">
-    <div class="login-container">
+    <div class="login-container" [formGroup]="form">
         <h1 style="margin-bottom: 40px;">ĐĂNG NHẬP</h1>
             <div class="form-group">
                 <label>TÀI KHOẢN</label>
-                <input type="text" name="user_name" id="username-container" placeholder="Nhập tài khoản của bạn vào đây">
+                <input type="text" name="user_name" id="username-container" placeholder="Nhập tài khoản của bạn vào đây" formControlName="taiKhoan1">
             </div>
             <div class="form-group">
                 <div style="display: flex; justify-content: space-between;align-items: flex-end;">
@@ -12,7 +12,7 @@
                     <a style="text-decoration: none;margin-bottom: 5px;color: #146C94;font-weight: bold;" href="#" routerLink="/forget-pass">Quên mật khẩu ?</a>
                 </div>
                 
-                <input [type]="changetype?'password':'text'" name="user_password" id="password-container" placeholder="Nhập mật khẩu của bạn vào đây">
+                <input [type]="changetype?'password':'text'" name="user_password" id="password-container" placeholder="Nhập mật khẩu của bạn vào đây" formControlName="matKhau">
                 <button class="eye-icon" (click)="viewpass()">
                     <mat-icon style="color: #146C94;" fontIcon="{{visible?'visibility':'visibility_off'}}"></mat-icon>            
                 </button>
@@ -24,7 +24,7 @@
                 </span>
             </div>
             <div class="div-center" style="margin-top: 20px;">
-                <button type="submit" class="button-submit">ĐĂNG NHẬP</button>
+                <button type="submit" class="button-submit" (click)="onLogin()">ĐĂNG NHẬP</button>
             </div>
         
     </div>
