--- a/src/app/pages/booking-ticket/booking-ticket.component.html
+++ b/src/app/pages/booking-ticket/booking-ticket.component.html
@@ -327,7 +327,7 @@
                                      <p class="color-1">GIÁ VÉ: <span class="color-2">{{ticket.donGia}}</span></p>
                                  </div>
                                  <div class="col-2 background-white color-1 fw-bold ">
-                                     <a routerLink="/booking-ticket-detail"
+                                     <a (click)="canAccess('/booking-ticket-detail')" ;
                                          class="btn btn-primary background-1 fw-bold px-4">ĐẶT VÉ</a>
                                  </div>
                              </div>
