--- a/src/app/pages/forget-pass/forget-pass.component.html
+++ b/src/app/pages/forget-pass/forget-pass.component.html
@@ -1,21 +1,38 @@
 <app-header></app-header>
-<section class="container-fluid div-center" style="height: calc(100vh - 48px);">
-    <div class="forgetPass-container">
-        <h1 style="margin-bottom: 40px;">QUÊN MẬT KHẨU</h1>
-            <div class="form-group">
-                <label>Gmail</label><br>
-                <input type="text" style="width: 270px;" name="user_gmail_forget" id="usergmail-container" placeholder="Nhập tài khoản của bạn vào đây">
-                <button type="button" class="button-resend" (click)="resendCode()">Gửi mã</button>
-
-            </div>
-            <div class="form-group">
-                <label>Nhập mã</label>
-                <input type="number" name="code_gmail" id="codegmail-container">
-                <p>Mật khẩu mới sẽ được gửi thông qua gmail của bạn, vui lòng sau khi đăng nhập hãy đổi mật khẩu</p>
-            </div>
-            <div class="div-center" style="margin-top: 20px;">
-                <button type="submit" class="button-submit">XÁC NHẬN</button>
-            </div>
-        
+<section class="container-fluid div-center" style="height: calc(100vh - 48px)">
+  <div class="forgetPass-container">
+    <h1 style="margin-bottom: 40px">QUÊN MẬT KHẨU</h1>
+    <div class="form-group">
+      <label>Gmail</label><br />
+      <input
+        type="text"
+        style="width: 270px"
+        name="user_gmail_forget"
+        id="usergmail-container"
+        placeholder="Nhập tài khoản của bạn vào đây"
+        [formControl]="email"
+      />
+      <button type="button" class="button-resend" (click)="resendCode()">
+        Gửi mã
+      </button>
     </div>
+    <div class="form-group">
+      <label>Nhập mã</label>
+      <input
+        type="text"
+        name="code_gmail"
+        id="codegmail-container"
+        [formControl]="inputOtp"
+      />
+      <p>
+        Mật khẩu mới sẽ được gửi thông qua gmail của bạn, vui lòng sau khi đăng
+        nhập hãy đổi mật khẩu
+      </p>
+    </div>
+    <div class="div-center" style="margin-top: 20px">
+      <button type="submit" class="button-submit" (click)="onSubmit()">
+        XÁC NHẬN
+      </button>
+    </div>
+  </div>
 </section>
