--- a/src/app/pages/booking-ticket/booking-ticket.component.html
+++ b/src/app/pages/booking-ticket/booking-ticket.component.html
@@ -234,6 +234,7 @@
  -->
 <app-header-home></app-header-home>
 <app-navbar></app-navbar>
+<button (click)="refreshPage()">Refresh</button>
 <div class="container my-5">
   <h1
     class="text-center my-2 color-2 fw-bold"
