--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -48,8 +48,7 @@
               <option value="HONGKONG" id="HK">Hồng Kông</option>
               <option value="HANQUOC" id="KR">Hàn Quốc</option>
             </select>
-          <button class="btn btn-outline-success btn-sreach col-1" type="submit" (click)="searchFlight()"
-          [routerLink]="['/booking-ticket']" [queryParams]="{ date: date, origin: departure, destination: destination }">TÌM</button>
+          <button class="btn btn-outline-success btn-sreach col-1" type="submit" (click)="searchFlight()">TÌM</button>
           </div>
         </form>
 
